versioned_docs/version-2.8.0/community-hub/media.md
# Media

Coverage of the Zaparoo project online.

## Press & Articles

### Major Tech Publications

- **[How to modernize your retro game collection in a few convoluted steps](https://www.theverge.com/24072166/retro-classic-game-roms-nfc-mister-how-to-modern)** - *The Verge* (February 29, 2024)
  Comprehensive feature article on TapTo/NFC system for MiSTer FPGA

- **[Exploring TapTo NFC Integration On The MiSTer](https://hackaday.com/2024/09/15/exploring-tapto-nfc-inegration-on-the-mister)** - *Hackaday* (September 15, 2024)
  Technical deep-dive into TapTo NFC cards and integration

- **[TapTo NFC Loading System - Gives MiSTer FPGA A Vital Physical Connection](https://www.timeextension.com/reviews/tapto-nfc-loading-system-gives-mister-fpga-a-vital-physical-connection)** - *Time Extension* (July 14, 2024)
  Full review of the TapTo NFC loading system

- **[This Amiibo-Like NFC System Is A Cute Way To Load Up Games On Your MiSTer FPGA](https://www.timeextension.com/news/2024/12/this-amiibo-like-nfc-system-is-a-cute-way-to-load-up-games-on-your-mister-fpga)** - *Time Extension* (December 19, 2024)
  Coverage of Pixel Memories NFC reader design

- **[MiSTer FPGA's Next Trick? Launching Games From CD](https://www.timeextension.com/news/2024/10/mister-fpgas-next-trick-launching-games-from-cd)** - *Time Extension* (October 8, 2024)
  Coverage of CD-based game launching with TapTo

### Retro Gaming News

- **[Using NFC Tags to Run Games on the MiSTer FPGA](https://www.retrorgb.com/using-nfc-tags-to-run-games-on-the-mister-fpga.html)** - *RetroRGB* (September 8, 2023)
  Early coverage of the NFC system

- **[Groovy MiSTer, MiSTerCast, TapTo, MiSTex & More](https://www.retrorgb.com/mister-fpga-news-groovy-mister-mistercast-tapto-mistex-more.html)** - *RetroRGB* (March 3, 2024)
  MiSTer FPGA news roundup including TapTo coverage

- **[TapTo Mobile NFC MiSTer App](https://www.retrorgb.com/tapto-mobile-nfc-mister-app.html)** - *RetroRGB* (April 18, 2024)
  Coverage of mobile app launch

- **[MiSTerFPGA News – Atari Jaguar, TapTo Rename & More](https://www.retrorgb.com/misterfpga-news-atari-jaguar-tapto-rename-more.html)** - *RetroRGB* (November 18, 2024)
  Coverage of TapTo rebranding to Zaparoo

- **[PC88, Play Videos on MiSTer, SNES Save States & More](https://www.retrorgb.com/mister-fpga-news-pc88-play-videos-on-mister-snes-save-states-more.html)** - *RetroRGB* (November 26, 2024)
  Coverage of Zaparoo movie launching feature

- **[The DIY MiSTer Handheld](https://www.retrorgb.com/the-diy-mister-handheld.html)** - *RetroRGB* (December 16, 2024)
  Features Zaparoo integration in handheld build

- **[Zaparoo Online, New Arcade Cores, New Mini-ITX IO Board & More](https://www.retrorgb.com/mister-fpga-news-zaparoo-online-new-arcade-cores-new-mini-itx-io-board-more.html)** - *RetroRGB* (February 17, 2025)
  Coverage of Zaparoo Online features

- **[MiSTer Pi Successor, New Arcade Cores, Downloader & More](https://www.retrorgb.com/mister-fpga-news-mister-pi-successor-new-arcade-cores-downloader-more.html)** - *RetroRGB* (March 20, 2025)
  Zaparoo integration coverage

- **[Atari System 2, Quarter MiSter, Multisystem Cart Support & More](https://www.retrorgb.com/mister-fpga-news-atari-system-2-quarter-mister-multisystem-cart-support-more.html)** - *RetroRGB* (July 21, 2025)
  Zaparoo updates including NAS support

- **[Zaparoo Releases Multisystem2 NFC Cards + Kit](https://metalgamesolid.com/misc/zaparoo-releases-multisystem2-nfc-cards-kit)** - *MetalGameSolid* (August 2, 2025)
  Product release coverage

- **[Zaparoo Will Soon Use Smart Game Matching](https://metalgamesolid.com/misc/zaparoo-will-soon-use-smart-game-matching)** - *MetalGameSolid* (October 19, 2025)
  Technical feature announcement

- **[Zaparoo Adds Support for USB and SD Cards as Launch Tokens](https://metalgamesolid.com/misc/zaparoo-adds-support-for-usb-and-sd-cards-as-launch-tokens)** - *MetalGameSolid* (October 25, 2025)
  New reader driver announcement

### Developer Articles & Community

- **[Creating TapTo](https://timwilsie.com/creating-tapto)** - *Tim Wilsie* (March 26, 2024)
  Behind-the-scenes on creating TapTo by the developer

- **[Putting TapTo in your pocket](https://timwilsie.com/portfolio/putting-tapto-in-your-pocket)** - *Tim Wilsie*
  Development story of the mobile app

- **[Launching retro games with NFC cards for fun and pleasure](https://forums.bit-tech.net/index.php?threads/launching-retro-games-with-nfc-cards-for-fun-and-pleasure.387972/)** - *Bit-Tech Forums* (September 28, 2025)
  User build log and discussion

## Video Content

### Tutorials & Demos

- **[MiSTer FPGA - Zaparoo Demo and Tutorial](https://www.youtube.com/watch?v=mMfIT-2wXrc)** - *Gentlemen's Pixel Club* (December 14, 2024)
  Comprehensive demo and tutorial of Zaparoo on MiSTer FPGA

- **[Exploring TapTo on the MiSTer](https://www.youtube.com/watch?v=73Kx3jwyk0U)** - *What's Ken Making* (July 12, 2024)
  In-depth exploration of the TapTo project

- **[Launch Games With Your Phones NFC | TapTo Life | MiSTer FPGA](https://www.youtube.com/watch?v=YzEqLl4ow0Q)** - *Retro Dodo Gaming* (April 18, 2024)
  Tutorial on using phone NFC with TapTo

- **[Launch Games with NFC Cards: Zaparoo + Batocera!](https://www.youtube.com/watch?v=BnnAX9cNUIE)** - *Zaparoo Official* (April 26, 2025)
  Zaparoo with Batocera on Raspberry Pi 5 demo

- **[Zaparoo Pt. 2 - Build in MISTER NFC reader + NFC cards](https://www.youtube.com/watch?v=mCrdyhnv24g)** - *Pixel Cherry Ninja* (July 27, 2025)
  PCB design and build tutorial

- **[TapTo NFC and MiSTer FPGA! Have a Physical Retro Game Collection](https://www.youtube.com/watch?v=rk-qAij-uM8)** - *Video Game Esoterica* (October 3, 2024)
  Overview of physical media aspect

- **[Wireless NFC Launching for MiSTER | ZAPAROO!](https://www.youtube.com/watch?v=W_m8dzvHQdM)** - *Pixel Cherry Ninja* (January 26, 2025)
  Wireless NFC functionality demo

- **[Unbelievably cool! Make you own working gamecarts!](https://www.youtube.com/watch?v=63EH1tI0HWk)** - *Pixel Cherry Ninja* (April 6, 2025)
  DIY game cartridge creation

- **[1,001 games to play instantly on MiSTer FPGA with TapTo/Zaparoo](https://www.youtube.com/watch?v=jSHnx0W8qR4)** - *Video Game Esoterica* (December 2, 2024)
  Showcase of 1001 games book integration

- **[You Can Have This Too | MiSTer FPGA | SMES + TapTo](https://www.youtube.com/watch?v=M220qOaxymY)** - *Retro Dodo Gaming* (September 15, 2024)
  SMES integration showcase

- **[GPC ARCADE LOTTERY - we play multiple games on the MiSTer](https://www.youtube.com/watch?v=Sxu6ydrxcio)** - *Gentlemen's Pixel Club* (December 22, 2024)
  Arcade lottery using Zaparoo

- **[MiSTer NFC cards experiment!](https://www.youtube.com/watch?v=jsficcAmyMI)** - *Gentlemen's Pixel Club* (November 20, 2023)
  Early NFC card experiments

### News & Updates

- **[MiSTer, Analogue Pocket, FPGA, Random & Retro Gaming News (ep129)](https://www.youtube.com/watch?v=ZNOjMzGHwHY)** - *Pixel Cherry Ninja* (December 14, 2024)
  News roundup including Zaparoo coverage

- **[FPGA & Retro Gaming News Ep172](https://www.youtube.com/watch?v=3Lo-bGugn6k)** - *Metal Game Solid* (November 8, 2025)
  FPGA news including Zaparoo updates

- **[Retro 168 #3 | RGB Pi2, Zaparoo, M64, PS1 MC, MiSTer NES & More](https://www.youtube.com/watch?v=ep5t8ScWLiI)** - *Metal Game Solid* (October 24, 2025)
  Weekly retro gaming news

## Official Resources

- **[Zaparoo YouTube Channel](https://www.youtube.com/@HeyZaparoo)** - Official project channel with tutorials and updates
- **[Zaparoo Blog](/blog)** - Official project blog with announcements and technical articles
